--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 </head>
 
 <body>
+    <div class="container w-100 m-auto">
+        <div class="row w-100 m-auto">
+            <div class="col-lg-6 ">
+                <div class="input-group mb-3 mt-5 w-100 m-auto">
+                    <input id="search-box" type="text" class="form-control me-sm-2" placeholder="" aria-label="search"
+                        aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button onclick="allPlayers()" class="input-group-text btn btn-outline-primary"
+                            id="search-btn">Search</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <h1>Right side.</h1>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
