--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
                             id="search-btn">Search</button>
                     </div>
                 </div>
+                <div id="player-container" class="player-container">
+
+                </div>
             </div>
-            <div class="col-lg-6">
-                <h1>Right side.</h1>
+            <div class="col-lg-6 text-center mt-5">
+                <div id="details-container" class="details-container">
+                    <div class="image-container w-50">
+                        <img id="barca" class="img-fluid rounded "
+                            src="https://www.fcbarcelonanoticias.com/uploads/s1/11/95/80/6/foto-de-equipo-del-fc-barcelona-slavia.jpeg"
+                            alt="">
+                        <img id="argentina" class="img-fluid rounded"
+                            src="https://i.pinimg.com/originals/9a/98/3a/9a983aa05ece1dd8c6a5cc19791033e0.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
